# mcp-setup

./: .gitignore  CLAUDE.md  SETUP_GUIDE.md  install.sh
dam-mcp/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  server.json
dam-mcp/cloud_functions/document_processor/: main.py
dam-mcp/cloud_functions/drive_sync/: main.py  requirements.txt
dam-mcp/dam_mcp/: __init__.py  __main__.py
dam-mcp/dam_mcp/core/: __init__.py  config.py  firestore.py  gcs.py  server.py  tools_download_url.py  tools_figma_export.py  tools_get.py  tools_list.py  tools_search.py  tools_semantic_search.py  tools_sync.py  tools_tag.py  tools_trigger_sync.py  tools_upload.py  utils.py
dam-mcp/gateway/: package-lock.json  package.json
dam-mcp/gateway/src/: index.ts
dam-mcp/scripts/: deploy.sh
dam-mcp/tests/: conftest.py  test_document_processor.py  test_download_url.py  test_figma_export.py  test_firestore.py  test_gcs.py  test_get_asset.py  test_list_assets.py  test_search_assets.py  test_semantic_search.py  test_sync_state_gcs.py  test_sync_status.py  test_tag_asset.py  test_trigger_sync.py  test_upload_asset.py
docs/: PROJECT_SHOWCASE.md  SCM_WORKSHOP_KONTEXT.md
docs/knowledge-setup/: 2026-04-20-status-synthese.md  ai-cockpit-manual-plan.md  claude-project-instructions-strategic-readonly.md  friday-retro-template.md  simon-tasks.md  (+3 more)
knowledge-mcp/: Dockerfile
meta-ads-mcp/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RELEASE.md  pyproject.toml  server.json  smithery.yaml
scripts/: README.md  install-team-setup.sh
(+72 files in other folders)
